--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 theme: jekyll-theme-dinky
 
-title: [Methanol Process Simulation]
-description: [by Rajdeep Dev <br>
-               71666887]
+title: Methanol Process Simulation
+description: by Rajdeep Dev (71666887)
